--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -2,5 +2,6 @@
   "home": "Doma",
   "app-page": "App stránka",
   "menu-settings": "Nastavení",
-  "menu-logout": "Odhlásit se"
+  "menu-logout": "Odhlásit se",
+  "sidenav-search": "Hledat politickou stranu"
 }
