--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,5 +3,5 @@
   "app-page": "App page",
   "menu-settings": "Settings",
   "menu-logout": "Logout",
-  "sidenav-search": "Vyhledávání politické strany"
+  "sidenav-search": "Search a political party"
 }
