--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,5 +2,6 @@
   "home": "Home page",
   "app-page": "App page",
   "menu-settings": "Settings",
-  "menu-logout": "Logout"
+  "menu-logout": "Logout",
+  "sidenav-search": "Search a political party"
 }
