--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,5 +3,7 @@
   "app-page": "App page",
   "menu-settings": "Settings",
   "menu-logout": "Logout",
-  "sidenav-search": "Search a political party"
+  "sidenav-search": "Search a political party",
+  "party-members": "Members",
+  "politician-search": "Search a politician"
 }
