--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -3,5 +3,7 @@
   "app-page": "App stránka",
   "menu-settings": "Nastavení",
   "menu-logout": "Odhlásit se",
-  "sidenav-search": "Hledat politickou stranu"
+  "sidenav-search": "Hledat politickou stranu",
+  "party-members": "Členové",
+  "politician-search": "Hledat politika"
 }
