Add no result text when no filter result is found

--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -5,5 +5,6 @@
   "menu-logout": "Odhlásit se",
   "sidenav-search": "Hledat politickou stranu",
   "party-members": "Členové",
-  "politician-search": "Hledat politika"
+  "politician-search": "Hledat politika",
+  "no-result": "Výsledek hledání nebyl nalezen"
 }
