--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,5 +5,6 @@
   "menu-logout": "Logout",
   "sidenav-search": "Search a political party",
   "party-members": "Members",
-  "politician-search": "Search a politician"
+  "politician-search": "Search a politician",
+  "no-result": "No search result found"
 }
