Political parties in sidenav menu + party detail (#12)
* Created new section, navigation

* Load parties in reactive way, add politicians UI

* Filter politicians

* Add no result text when no filter result is found

* Dayjs for date formating

--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -3,5 +3,8 @@
   "app-page": "App stránka",
   "menu-settings": "Nastavení",
   "menu-logout": "Odhlásit se",
-  "sidenav-search": "Hledat politickou stranu"
+  "sidenav-search": "Hledat politickou stranu",
+  "party-members": "Členové",
+  "politician-search": "Hledat politika",
+  "no-result": "Výsledek hledání nebyl nalezen"
 }
