--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -6,5 +6,6 @@
   "sidenav-search": "Hledat politickou stranu",
   "party-members": "Členové",
   "politician-search": "Hledat politika",
-  "no-result": "Výsledek hledání nebyl nalezen"
+  "no-result": "Výsledek hledání nebyl nalezen",
+  "sidenav-home": "Hlavní strana"
 }
