News ngxs state, actions

--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -7,5 +7,7 @@
   "party-members": "Členové",
   "politician-search": "Hledat politika",
   "no-result": "Výsledek hledání nebyl nalezen",
-  "sidenav-home": "Hlavní strana"
+  "sidenav-home": "Hlavní strana",
+  "menu-action-edit": "Upravit",
+  "menu-action-delete": "Smazat"
 }
