Add-new button, refactor files location

--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -9,5 +9,6 @@
   "no-result": "Výsledek hledání nebyl nalezen",
   "sidenav-home": "Hlavní strana",
   "menu-action-edit": "Upravit",
-  "menu-action-delete": "Smazat"
+  "menu-action-delete": "Smazat",
+  "add-post": "Přidat článek"
 }
