--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -19,5 +19,7 @@
   "politician-instagramUrl": "Odkaz na instagram účet",
   "politician-facebookUrl": "Odkaz na facebook účet",
   "create": "Vytvořit",
-  "back": "Zpět"
+  "back": "Zpět",
+  "form-required": "Povinný údaj",
+  "form-date": "Chybný formát datumu (DD/MM/YYYY)"
 }
