Edit politician, make reusable form for add/edit

--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -12,6 +12,7 @@
   "menu-action-delete": "Smazat",
   "add-politician": "Přidat politika",
   "politician-new": "Nový politik",
+  "politician-edit": "Upravit politika",
   "politician-name": "Jméno a příjmení",
   "birthday": "Datum narození",
   "politician-profileImageUrl": "Odkaz na profilový obrázek",
