--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,6 +12,7 @@
   "menu-action-delete": "Delete",
   "add-politician": "Add politician",
   "politician-new": "New politician",
+  "politician-edit": "Edit politician",
   "politician-name": "Name and Surname",
   "birthday": "Date of birth",
   "politician-profileImageUrl": "Profile picture link",
