Feature/politician add/edit (#21)
* Preparation for add politician functionality

* Add-politician form

* Add-politician post form values

* Edit politician, make reusable form for add/edit

* edit politician form

* refactoring

* refactoring

* EU date picker format

* rename name to fullName, scss fixes

* Add todo

* Add tests for politician form, remove unused tests, refactor

* Todo + fix

* Increate budget size

--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -9,5 +9,18 @@
   "no-result": "Výsledek hledání nebyl nalezen",
   "sidenav-home": "Hlavní strana",
   "menu-action-edit": "Upravit",
-  "menu-action-delete": "Smazat"
+  "menu-action-delete": "Smazat",
+  "add-politician": "Přidat politika",
+  "politician-new": "Nový politik",
+  "politician-edit": "Upravit politika",
+  "politician-name": "Jméno a příjmení",
+  "birthday": "Datum narození",
+  "politician-profileImageUrl": "Odkaz na profilový obrázek",
+  "politician-twitterUrl": "Odkaz na twitter účet",
+  "politician-instagramUrl": "Odkaz na instagram účet",
+  "politician-facebookUrl": "Odkaz na facebook účet",
+  "create": "Vytvořit",
+  "back": "Zpět",
+  "form-required": "Povinný údaj",
+  "form-date": "Chybný formát datumu (DD/MM/YYYY)"
 }
