Datepicker is localizable

--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -22,5 +22,6 @@
   "create": "Vytvořit",
   "back": "Zpět",
   "form-required": "Povinný údaj",
-  "form-date": "Chybný formát datumu (DD/MM/YYYY)"
+  "form-date": "Chybný formát datumu (DD.MM.YYYY)",
+  "year-format": "DD.MM.YYYY"
 }
