--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,5 +22,6 @@
   "create": "Create",
   "back": "Back",
   "form-required": "Required field",
-  "form-date": "Wrong date format (DD/MM/YYYY)"
+  "form-date": "Wrong date format (DD/MM/YYYY)",
+  "year-format": "DD/MM/YYYY"
 }
