--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -2,6 +2,7 @@
   "home": "Doma",
   "app-page": "App stránka",
   "menu-settings": "Nastavení",
+  "menu-admin": "Admin sekce",
   "menu-logout": "Odhlásit se",
   "sidenav-search": "Hledat politickou stranu",
   "party-members": "Členové",
@@ -23,5 +24,6 @@
   "back": "Zpět",
   "form-required": "Povinný údaj",
   "form-date": "Chybný formát datumu (DD.MM.YYYY)",
-  "year-format": "DD.MM.YYYY"
+  "year-format": "DD.MM.YYYY",
+  "admin-party-add": "Přidat politickou stranu"
 }
