--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -26,5 +26,11 @@
   "form-date": "Chybný formát datumu (DD.MM.YYYY)",
   "year-format": "DD.MM.YYYY",
   "admin-party-add": "Přidat politickou stranu",
-  "edit-party": "Upravit stranu"
+  "edit-party": "Upravit stranu",
+  "party-name": "Název politické strany",
+  "party-image": "Odkaz na logo politické strany",
+  "party-tags": "Tagy politické strany",
+  "party-tag-placeholder": "Slouží pro zlepšení filtrování",
+  "chips-hint": "Zadávání slova ukončete zmáčknutím klávesy ENTER nebo znakem čárky",
+  "chips-required": "Povinný údaj - musí obsahovat alespoň 1 slovo"
 }
