Finish political party forms

--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -21,6 +21,7 @@
   "politician-instagramUrl": "Odkaz na instagram účet",
   "politician-facebookUrl": "Odkaz na facebook účet",
   "create": "Vytvořit",
+  "update": "Uložit",
   "back": "Zpět",
   "form-required": "Povinný údaj",
   "form-date": "Chybný formát datumu (DD.MM.YYYY)",
