Feature/political party create edit (#29)
* Admin section

* Admin section

* Create party form, components, routing

* Make abstractFormComponent, start creating partyForm

* Make form nonullable

* Admin section

* Create party form, components, routing

* Make abstractFormComponent, start creating partyForm

* Make form nonullable

* Add allowedJsDependencies

* Add-party form in progress

* finish chips in form for tags

* Add-politician in party form

* Finish add-political party

* Lint

* Finish political party forms

* Finalize party form, add party actions

* Fix tests

--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -2,6 +2,7 @@
   "home": "Doma",
   "app-page": "App stránka",
   "menu-settings": "Nastavení",
+  "menu-admin": "Admin sekce",
   "menu-logout": "Odhlásit se",
   "sidenav-search": "Hledat politickou stranu",
   "party-members": "Členové",
@@ -10,7 +11,7 @@
   "sidenav-home": "Hlavní strana",
   "menu-action-edit": "Upravit",
   "menu-action-delete": "Smazat",
-  "add-politician": "Přidat politika",
+  "politician-add": "Přidat politika",
   "politician-new": "Nový politik",
   "politician-edit": "Upravit politika",
   "politician-name": "Jméno a příjmení",
@@ -20,8 +21,18 @@
   "politician-instagramUrl": "Odkaz na instagram účet",
   "politician-facebookUrl": "Odkaz na facebook účet",
   "create": "Vytvořit",
+  "update": "Uložit",
   "back": "Zpět",
   "form-required": "Povinný údaj",
   "form-date": "Chybný formát datumu (DD.MM.YYYY)",
-  "year-format": "DD.MM.YYYY"
+  "year-format": "DD.MM.YYYY",
+  "admin-party-add": "Přidat politickou stranu",
+  "edit-party": "Upravit stranu",
+  "party-name": "Název politické strany",
+  "party-image": "Odkaz na logo politické strany",
+  "party-tags": "Tagy politické strany",
+  "party-tag-placeholder": "Slouží pro zlepšení filtrování",
+  "chips-hint": "Zadávání slova ukončete zmáčknutím klávesy ENTER nebo znakem čárky",
+  "chips-required": "Povinný údaj - musí obsahovat alespoň 1 slovo",
+  "error-politician-required": "Pro vytvoření politické strany přidejte alespoň 1 politika"
 }
