--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,6 +2,7 @@
   "home": "Home page",
   "app-page": "App page",
   "menu-settings": "Settings",
+  "menu-admin": "Admin section",
   "menu-logout": "Logout",
   "sidenav-search": "Search a political party",
   "party-members": "Members",
@@ -10,7 +11,7 @@
   "sidenav-home": "Home",
   "menu-action-edit": "Edit",
   "menu-action-delete": "Delete",
-  "add-politician": "Add politician",
+  "politician-add": "Add politician",
   "politician-new": "New politician",
   "politician-edit": "Edit politician",
   "politician-name": "Name and Surname",
@@ -20,8 +21,18 @@
   "politician-instagramUrl": "Instagram account link",
   "politician-facebookUrl": "Facebook account link",
   "create": "Create",
+  "update": "Update",
   "back": "Back",
   "form-required": "Required field",
   "form-date": "Wrong date format (DD/MM/YYYY)",
-  "year-format": "DD/MM/YYYY"
+  "year-format": "DD/MM/YYYY",
+  "admin-party-add": "Add political party",
+  "edit-party": "Edit party",
+  "party-name": "Political party name",
+  "party-image": "Link to political party logo/image",
+  "party-tags": "Political party tags",
+  "party-tag-placeholder": "Used to improve filtering",
+  "chips-hint": "To finish typing a word, press ENTER or the comma key",
+  "chips-required": "Required field - must contain at least 1 word",
+  "error-politician-required": "To create a political party, add at least 1 politician"
 }
