--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,5 +34,10 @@
   "party-tag-placeholder": "Used to improve filtering",
   "chips-hint": "To finish typing a word, press ENTER or the comma key",
   "chips-required": "Required field - must contain at least 1 word",
-  "error-politician-required": "To create a political party, add at least 1 politician"
+  "error-politician-required": "To create a political party, add at least 1 politician",
+  "party-create-success": "Political party was successfully created",
+  "party-edit-success": "Political party was Political party was successfully created upravena",
+  "politician-create-success": "Politician was successfully created",
+  "politician-edit-success": "Politician was successfully edited",
+  "politician-remove-success": "Politician was successfully removed"
 }
