Prepare local data for demo purposes

--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -7,7 +7,8 @@
   "sidenav-search": "Hledat politickou stranu",
   "party-members": "Členové",
   "politician-search": "Hledat politika",
-  "no-result": "Výsledek hledání nebyl nalezen",
+  "politician": "Politik",
+  "no-result": "Nic se zde nenachází",
   "sidenav-home": "Hlavní strana",
   "menu-action-edit": "Upravit",
   "menu-action-delete": "Smazat",
@@ -27,6 +28,7 @@
   "form-date": "Chybný formát datumu (DD.MM.YYYY)",
   "year-format": "DD.MM.YYYY",
   "admin-party-add": "Přidat politickou stranu",
+  "admin-party-edit": "Upravit politickou stranu",
   "edit-party": "Upravit stranu",
   "remove-party": "Odstranit stranu",
   "party-name": "Název politické strany",
