--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,7 +7,8 @@
   "sidenav-search": "Search a political party",
   "party-members": "Members",
   "politician-search": "Search a politician",
-  "no-result": "No search result found",
+  "politician": "Politician",
+  "no-result": "No results",
   "sidenav-home": "Home",
   "menu-action-edit": "Edit",
   "menu-action-delete": "Delete",
@@ -27,6 +28,7 @@
   "form-date": "Wrong date format (DD/MM/YYYY)",
   "year-format": "DD/MM/YYYY",
   "admin-party-add": "Add political party",
+  "admin-party-edit": "Edit political party",
   "edit-party": "Edit party",
   "remove-party": "Remove party",
   "party-name": "Political party name",
