--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -5,6 +5,7 @@
   "menu-admin": "Admin sekce",
   "menu-logout": "Odhlásit se",
   "sidenav-search": "Hledat politickou stranu",
+  "politician": "Politik",
   "party-members": "Členové",
   "politician-search": "Hledat politika",
   "no-result": "Výsledek hledání nebyl nalezen",
@@ -27,6 +28,7 @@
   "form-date": "Chybný formát datumu (DD.MM.YYYY)",
   "year-format": "DD.MM.YYYY",
   "admin-party-add": "Přidat politickou stranu",
+  "admin-party-edit": "Upravit politickou stranu",
   "edit-party": "Upravit stranu",
   "remove-party": "Odstranit stranu",
   "party-name": "Název politické strany",
