--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,6 +6,7 @@
   "menu-logout": "Logout",
   "sidenav-search": "Search a political party",
   "party-members": "Members",
+  "politician": "Politician",
   "politician-search": "Search a politician",
   "no-result": "No search result found",
   "sidenav-home": "Home",
@@ -27,6 +28,7 @@
   "form-date": "Wrong date format (DD/MM/YYYY)",
   "year-format": "DD/MM/YYYY",
   "admin-party-add": "Add political party",
+  "admin-party-edit": "Update political party",
   "edit-party": "Edit party",
   "remove-party": "Remove party",
   "party-name": "Political party name",
