--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,6 +27,7 @@
   "form-required": "Required field",
   "form-bad-url-pattern": "Wrong link format",
   "form-date": "Wrong date format (DD/MM/YYYY)",
+  "form-minimum-age": "The politician must be at least 21 years old",
   "year-format": "DD/MM/YYYY",
   "admin-party-add": "Add political party",
   "admin-party-edit": "Edit political party",
