Feature/connect to be (#32)
* Modify political-parties

* Improve error handling

* Correct flow when creating politician

* Show notification when party/politician action was success.

* Improve politicians grid

* Remove political party logic

* Add todos

* Fix politician title colliding with admin actions

* Edit translation

* Load politician image from url

* Improve politicians grid

* Complete todos

* Update attributes

* fix test

* Open form for 1. politician when creating party

* Dialog for remove actions

* Add url validator for forms

* Extend unit tests

* url must begin with http/s

* Add age validator

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,11 +6,12 @@
   "menu-logout": "Logout",
   "sidenav-search": "Search a political party",
   "party-members": "Members",
+  "politician": "Politician",
   "politician-search": "Search a politician",
   "no-result": "No search result found",
   "sidenav-home": "Home",
   "menu-action-edit": "Edit",
-  "menu-action-delete": "Delete",
+  "menu-action-delete": "Remove",
   "politician-add": "Add politician",
   "politician-new": "New politician",
   "politician-edit": "Edit politician",
@@ -24,15 +25,30 @@
   "update": "Update",
   "back": "Back",
   "form-required": "Required field",
+  "form-bad-url-pattern": "Wrong link format",
   "form-date": "Wrong date format (DD/MM/YYYY)",
+  "form-minimum-age": "The politician must be at least 21 years old",
   "year-format": "DD/MM/YYYY",
   "admin-party-add": "Add political party",
+  "admin-party-edit": "Update political party",
   "edit-party": "Edit party",
+  "remove-party": "Remove party",
+  "remove-party-content": "Do you really want to remove a political party?",
+  "remove-politician": "Remove politician",
+  "remove-politician-content": "Do you really want to remove a politician?",
   "party-name": "Political party name",
   "party-image": "Link to political party logo/image",
   "party-tags": "Political party tags",
   "party-tag-placeholder": "Used to improve filtering",
   "chips-hint": "To finish typing a word, press ENTER or the comma key",
   "chips-required": "Required field - must contain at least 1 word",
-  "error-politician-required": "To create a political party, add at least 1 politician"
+  "error-politician-required": "To create a political party, add at least 1 politician",
+  "party-create-success": "Political party was successfully created",
+  "party-edit-success": "Political party was successfully edited",
+  "party-remove-success": "Political party was removed",
+  "politician-create-success": "Politician was successfully created",
+  "politician-edit-success": "Politician was successfully edited",
+  "politician-remove-success": "Politician was removed",
+  "dialog-remove": "Remove",
+  "dialog-action-cancel": "Cancel"
 }
