--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -5,6 +5,7 @@
   "menu-admin": "Admin sekce",
   "menu-logout": "Odhlásit se",
   "sidenav-search": "Hledat politickou stranu",
+  "politician": "Politik",
   "party-members": "Členové",
   "politician-search": "Hledat politika",
   "no-result": "Výsledek hledání nebyl nalezen",
@@ -24,15 +25,30 @@
   "update": "Uložit",
   "back": "Zpět",
   "form-required": "Povinný údaj",
+  "form-bad-url-pattern": "Chybný formát odkazu",
   "form-date": "Chybný formát datumu (DD.MM.YYYY)",
+  "form-minimum-age": "Politikovi musí být alespoň 21 let",
   "year-format": "DD.MM.YYYY",
   "admin-party-add": "Přidat politickou stranu",
+  "admin-party-edit": "Upravit politickou stranu",
   "edit-party": "Upravit stranu",
+  "remove-party": "Odstranit stranu",
+  "remove-party-content": "Opravdu chcete odstranit politickou stranu?",
+  "remove-politician": "Odstranit politika",
+  "remove-politician-content": "Opravdu chcete odstranit politika?",
   "party-name": "Název politické strany",
   "party-image": "Odkaz na logo politické strany",
   "party-tags": "Tagy politické strany",
   "party-tag-placeholder": "Slouží pro zlepšení filtrování",
   "chips-hint": "Zadávání slova ukončete zmáčknutím klávesy ENTER nebo znakem čárky",
   "chips-required": "Povinný údaj - musí obsahovat alespoň 1 slovo",
-  "error-politician-required": "Pro vytvoření politické strany přidejte alespoň 1 politika"
+  "error-politician-required": "Pro vytvoření politické strany přidejte alespoň 1 politika",
+  "party-create-success": "Politická strana byla úspěšně vytvořena",
+  "party-edit-success": "Politická strana byla úspěšně upravena",
+  "party-remove-success": "Politická strana byla odstraněna",
+  "politician-create-success": "Politik byl úspěšně vytvořen",
+  "politician-edit-success": "Politik byl úspěšně upraven",
+  "politician-remove-success": "Politik byl odstraněn",
+  "dialog-remove": "Odstranit",
+  "dialog-action-cancel": "Zrušit"
 }
