Login and logout logic

--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -4,6 +4,7 @@
   "menu-settings": "Nastavení",
   "menu-admin": "Admin sekce",
   "menu-logout": "Odhlásit se",
+  "menu-login": "Přihlásit se",
   "sidenav-search": "Hledat politickou stranu",
   "politician": "Politik",
   "party-members": "Členové",
