--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,6 +4,7 @@
   "menu-settings": "Settings",
   "menu-admin": "Admin section",
   "menu-logout": "Logout",
+  "menu-login": "Login",
   "sidenav-search": "Search a political party",
   "party-members": "Members",
   "politician": "Politician",
