--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,7 +2,7 @@
   "home": "Home page",
   "app-page": "App page",
   "menu-settings": "Settings",
-  "menu-admin": "Admin section",
+  "menu-admin": "Administration",
   "menu-logout": "Logout",
   "menu-login": "Login",
   "sidenav-search": "Search a political party",
