Change admin section translation

--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -2,7 +2,7 @@
   "home": "Doma",
   "app-page": "App stránka",
   "menu-settings": "Nastavení",
-  "menu-admin": "Admin sekce",
+  "menu-admin": "Administrace",
   "menu-logout": "Odhlásit se",
   "sidenav-search": "Hledat politickou stranu",
   "party-members": "Členové",
