--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,8 +2,9 @@
   "home": "Home page",
   "app-page": "App page",
   "menu-settings": "Settings",
-  "menu-admin": "Admin section",
+  "menu-admin": "Administration",
   "menu-logout": "Logout",
+  "menu-login": "Login",
   "sidenav-search": "Search a political party",
   "party-members": "Members",
   "politician": "Politician",
@@ -50,5 +51,6 @@
   "politician-edit-success": "Politician was successfully edited",
   "politician-remove-success": "Politician was removed",
   "dialog-remove": "Remove",
-  "dialog-action-cancel": "Cancel"
+  "dialog-action-cancel": "Cancel",
+  "login-register": "Login / Register"
 }
