Add news button

--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -13,6 +13,7 @@
   "sidenav-home": "Hlavní strana",
   "menu-action-edit": "Upravit",
   "menu-action-delete": "Smazat",
+  "news-add": "Přidat článek",
   "politician-add": "Přidat politika",
   "politician-new": "Nový politik",
   "politician-edit": "Upravit politika",
