Add better news UI to demo

--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -12,6 +12,8 @@
   "sidenav-home": "Hlavní strana",
   "menu-action-edit": "Upravit",
   "menu-action-delete": "Smazat",
+  "news-add": "Přidat článek",
+  "news-deleted": "Článek byl úspěšně smazán",
   "politician-add": "Přidat politika",
   "politician-new": "Nový politik",
   "politician-edit": "Upravit politika",
