--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,6 +15,7 @@
   "menu-action-delete": "Remove",
   "news-add": "Add news",
   "politician-add": "Add politician",
+  "politician-add-next": "Add another politician",
   "politician-new": "New politician",
   "politician-edit": "Edit politician",
   "politician-name": "Name and Surname",
