Improve UX/UI, add tooltips, improve responsivnes for sidenav

--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -15,6 +15,7 @@
   "news-add": "Přidat článek",
   "news-deleted": "Článek byl úspěšně smazán",
   "politician-add": "Přidat politika",
+  "politician-add-next": "Přidat dalšího politika",
   "politician-new": "Nový politik",
   "politician-edit": "Upravit politika",
   "politician-name": "Jméno a příjmení",
