Display text and add button when no politician present in party

--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -54,5 +54,6 @@
   "politician-remove-success": "Politik byl odstraněn",
   "dialog-remove": "Odstranit",
   "dialog-action-cancel": "Zrušit",
-  "login-register": "Příhlásit / Registrovat"
+  "login-register": "Příhlásit / Registrovat",
+  "no-politicians": "Tato politická strana neobsahuje žádné politiky"
 }
