--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -54,5 +54,6 @@
   "politician-remove-success": "Politician was removed",
   "dialog-remove": "Remove",
   "dialog-action-cancel": "Cancel",
-  "login-register": "Login / Register"
+  "login-register": "Login / Register",
+  "no-politicians": "This political party has no politicians"
 }
