--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -53,5 +53,8 @@
   "politician-edit-success": "Politician was successfully edited",
   "politician-remove-success": "Politician was removed",
   "dialog-remove": "Remove",
-  "dialog-action-cancel": "Cancel"
+  "dialog-action-cancel": "Cancel",
+  "login-register": "Login / Register",
+  "no-politicians": "This political party has no politicians",
+  "actions": "Actions"
 }
