Improve political party UX/UI + add utils scss

--- a/src/assets/i18n/cz.json
+++ b/src/assets/i18n/cz.json
@@ -56,5 +56,6 @@
   "dialog-action-cancel": "Zrušit",
   "login-register": "Příhlásit / Registrovat",
   "no-politicians": "Tato politická strana neobsahuje žádné politiky",
-  "actions": "Akce"
+  "actions": "Akce",
+  "politicians":"Politici"
 }
